Prevent wrapping on home page header
[SF-119]

--- a/app/assets/stylesheets/theme/umn.css.scss
+++ b/app/assets/stylesheets/theme/umn.css.scss
@@ -133,3 +133,9 @@ $school_dark_color: #404d5b;
 h3 {
   font-size: 1.5rem;
 }
+
+.home-content {
+  h2 {
+    font-size: 1.7rem;
+  }
+}
